{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 81,
  "lineage": "9b24c24f-92e9-a689-c792-f7e8d6a6babf",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a07b7d27d11228cf",
            "arn": "arn:aws:ec2:us-east-2:676614128916:elastic-ip/eipalloc-0a07b7d27d11228cf",
            "association_id": "eipassoc-0199efae03005156c",
            "domain": "vpc",
            "id": "eipalloc-0a07b7d27d11228cf",
            "network_border_group": "us-east-2",
            "network_interface": "eni-02fecb0338b037bf5",
            "private_dns": "ip-10-0-14-42.us-east-2.compute.internal",
            "private_ip": "10.0.14.42",
            "public_dns": "ec2-3-17-51-207.us-east-2.compute.amazonaws.com",
            "public_ip": "3.17.51.207",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "test-nat"
            },
            "tags_all": {
              "Name": "test-nat"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:676614128916:internet-gateway/igw-0d8be3e9eccf1d0db",
            "id": "igw-0d8be3e9eccf1d0db",
            "owner_id": "676614128916",
            "tags": {
              "Name": "test-igw"
            },
            "tags_all": {
              "Name": "test-igw"
            },
            "vpc_id": "vpc-0c158a6f7327e002c"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a07b7d27d11228cf",
            "association_id": "eipassoc-0199efae03005156c",
            "connectivity_type": "public",
            "id": "nat-09963fe2ccc4a24a7",
            "network_interface_id": "eni-02fecb0338b037bf5",
            "private_ip": "10.0.14.42",
            "public_ip": "3.17.51.207",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0979418883f421fb8",
            "tags": {
              "Name": "test-nat"
            },
            "tags_all": {
              "Name": "test-nat"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_subnet.private_zone1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:676614128916:route-table/rtb-09a1ea92b96cc66ab",
            "id": "rtb-09a1ea92b96cc66ab",
            "owner_id": "676614128916",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-09963fe2ccc4a24a7",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "test-private"
            },
            "tags_all": {
              "Name": "test-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c158a6f7327e002c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_subnet.private_zone1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:676614128916:route-table/rtb-027a9d1293fd73fbc",
            "id": "rtb-027a9d1293fd73fbc",
            "owner_id": "676614128916",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d8be3e9eccf1d0db",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "test-public"
            },
            "tags_all": {
              "Name": "test-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c158a6f7327e002c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_zone1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0eb3769e91bccbeef",
            "route_table_id": "rtb-09a1ea92b96cc66ab",
            "subnet_id": "subnet-0979418883f421fb8"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private_zone1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_zone2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fe0dea79119a5092",
            "route_table_id": "rtb-09a1ea92b96cc66ab",
            "subnet_id": "subnet-01bebe06b041c37ac"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private_zone1",
            "aws_subnet.private_zone2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_zone1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06b25890d83e19590",
            "route_table_id": "rtb-027a9d1293fd73fbc",
            "subnet_id": "subnet-0fc5683d7dbdc9f4d"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public_zone1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_zone2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b401b77d8232893b",
            "route_table_id": "rtb-027a9d1293fd73fbc",
            "subnet_id": "subnet-0a1b1565eb5dc4008"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public_zone2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_zone1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:676614128916:subnet/subnet-0979418883f421fb8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.0.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0979418883f421fb8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "676614128916",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "test-private-us-east-2a",
              "kubernetes.io/cluster/test-demo": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "test-private-us-east-2a",
              "kubernetes.io/cluster/test-demo": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0c158a6f7327e002c"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_zone2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:676614128916:subnet/subnet-01bebe06b041c37ac",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.32.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01bebe06b041c37ac",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "676614128916",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "test-private-us-east-2b",
              "kubernetes.io/cluster/test-demo": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "test-private-us-east-2b",
              "kubernetes.io/cluster/test-demo": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0c158a6f7327e002c"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_zone1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:676614128916:subnet/subnet-0fc5683d7dbdc9f4d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.64.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fc5683d7dbdc9f4d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "676614128916",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "test-public-us-east-2a",
              "kubernetes.io/cluster/test-demo": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "test-public-us-east-2a",
              "kubernetes.io/cluster/test-demo": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0c158a6f7327e002c"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_zone2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:676614128916:subnet/subnet-0a1b1565eb5dc4008",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.96.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a1b1565eb5dc4008",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "676614128916",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "test-public-us-east-2b",
              "kubernetes.io/cluster/test-demo": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "test-public-us-east-2b",
              "kubernetes.io/cluster/test-demo": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0c158a6f7327e002c"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:676614128916:vpc/vpc-0c158a6f7327e002c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0886be9bddfe651ee",
            "default_route_table_id": "rtb-05ce4fd4b46456468",
            "default_security_group_id": "sg-09a7dedb8d7e2e837",
            "dhcp_options_id": "dopt-0de27a73c2ecee43c",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c158a6f7327e002c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-05ce4fd4b46456468",
            "owner_id": "676614128916",
            "tags": {
              "Name": "test-main"
            },
            "tags_all": {
              "Name": "test-main"
            }
          }
        }
      ]
    }
  ]
}